RESOLVED FIXED194971
[Cocoa] Do not suppress deprecation warnings when calling sandbox_extension_issue_file
https://bugs.webkit.org/show_bug.cgi?id=194971
Summary [Cocoa] Do not suppress deprecation warnings when calling sandbox_extension_i...
Andy Estes
Reported 2019-02-22 16:59:49 PST
[Cocoa] Do not suppress deprecation warnings when calling sandbox_extension_issue_file
Attachments
Patch (1.67 KB, patch)
2019-02-22 17:01 PST, Andy Estes
no flags
Andy Estes
Comment 1 2019-02-22 17:00:19 PST
Andy Estes
Comment 2 2019-02-22 17:01:38 PST
WebKit Commit Bot
Comment 3 2019-02-22 20:51:02 PST
Comment on attachment 362795 [details] Patch Clearing flags on attachment: 362795 Committed r241985: <https://trac.webkit.org/changeset/241985>
WebKit Commit Bot
Comment 4 2019-02-22 20:51:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.