[Cocoa] Do not suppress deprecation warnings when calling sandbox_extension_issue_file https://bugs.webkit.org/show_bug.cgi?id=194971 <rdar://problem/35786264>

Reviewed by Tim Horton.

sandbox_extension_issue_file is not actually deprecated.

* Shared/mac/SandboxExtensionMac.mm:
(WebKit::SandboxExtensionImpl::sandboxExtensionForType):


Canonical link: https://commits.webkit.org/209334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241985 268f45cc-cd09-0410-ab3c-d52691b4dbfc