Source/WebKit/Shared/mac/SandboxExtensionMac.mm
@@ -84,11 +84,9 @@ private:
     {
         switch (type) {
         case SandboxExtension::Type::ReadOnly:
-            ALLOW_DEPRECATED_DECLARATIONS_BEGIN
             return sandbox_extension_issue_file(APP_SANDBOX_READ, path, 0);
         case SandboxExtension::Type::ReadWrite:
             return sandbox_extension_issue_file(APP_SANDBOX_READ_WRITE, path, 0);
-            ALLOW_DEPRECATED_DECLARATIONS_END
         case SandboxExtension::Type::Generic:
             return sandbox_extension_issue_generic(path, 0);
         }
